# wiki-summary

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  ruff.toml  start-full.sh
docker/: Dockerfile  docker-compose.yml
src/: main.py
src/api/: api.py
src/api/endpoints/: wiki.py
src/configs/: config.py  logger.py
src/constants/: crud_types.py  user.py
src/crud/: article.py  summary.py
src/crud/crud_mixins/: __init__.py  update.py
src/databases/: database.py
src/databases/migrations/: env.py
src/databases/migrations/versions/: 2025_06_05_0522-c484e939a43f_init.py
src/models/: __init__.py  article.py  summary.py
src/schemas/: article.py  summary.py
src/services/: article.py  summary.py
src/utilities/: exceptions.py  openai.py  parser.py  valid_url.py
